feat: Ajout fonctionnalitÃ© suppression retraits + corrections systÃ¨me retraits
- Ajout fonctionnalitÃ© suppression retraits pour utilisateurs PRIVILEGE
- Vue de suppression avec contrÃ´le des permissions strict
- Template de confirmation avec interface professionnelle
- Suppression logique sÃ©curisÃ©e avec audit complet
- Boutons de suppression dans liste et dÃ©tail des retraits
- Correction systÃ¨me de retraits automatiques (calcul loyers)
- Correction affichage propriÃ©tÃ©s Dupont dans retraits
- AmÃ©lioration templates avec colonne statut et affichage conditionnel
- Ajout app_label aux modÃ¨les proprietes pour configuration Django
- Documentation complÃ¨te des corrections et fonctionnalitÃ©s

--- a/templates/paiements/recapitulatifs/recapitulatif_mensuel_pdf.html
+++ b/templates/paiements/recapitulatifs/recapitulatif_mensuel_pdf.html
@@ -251,7 +251,7 @@
                         {% endif %}
                     </td>
                     <td class="text-right">{{ detail.loyer_mensuel|floatformat:0 }} F CFA</td>
-                    <td class="text-right">{{ detail.total_charges_bailleur|floatformat:0 }} F CFA</td>
+                    <td class="text-right">{{ detail.get_total_charges_bailleur|floatformat:0 }} F CFA</td>
                     <td class="text-right">{{ detail.montant_net_a_payer|floatformat:0 }} F CFA</td>
                 </tr>
                 {% endfor %}
