--- a/templates/core/dashboard_unified.html
+++ b/templates/core/dashboard_unified.html
@@ -303,7 +303,7 @@
                 <a href="{% url 'paiements:retraits_liste' %}" class="quick-action-btn warning">
                     <i class="bi bi-bank me-1"></i>Retraits
                 </a>
-                <a href="{% url 'paiements:dashboard_intelligent' %}" class="quick-action-btn success">
+                <a href="{% url 'paiements:retrait_auto_create' %}" class="quick-action-btn success">
                     <i class="bi bi-magic me-1"></i>Retraits Intelligents
                 </a>
 
