--- a/templates/core/intelligent_search.html
+++ b/templates/core/intelligent_search.html
@@ -462,7 +462,7 @@
                 <div class="result-details">
                     <div class="detail-item">
                         <div class="detail-label">Prix</div>
-                        <div class="detail-value">{{ propriete.loyer_actuel }} F CFA</div>
+                        <div class="detail-value">{{ propriete.get_loyer_actuel_calcule }} F CFA</div>
                     </div>
                     <div class="detail-item">
                         <div class="detail-label">Surface</div>
