--- a/templates/paiements/retraits/dashboard_intelligent_retraits.html
+++ b/templates/paiements/retraits/dashboard_intelligent_retraits.html
@@ -59,7 +59,7 @@
                     <p class="text-muted mb-0">{{ subtitle }}</p>
                 </div>
                 <div>
-                    <a href="{% url 'paiements:retrait_intelligent_create' %}" class="btn btn-primary">
+                    <a href="{% url 'paiements:retrait_auto_create' %}" class="btn btn-primary">
                         <i class="bi bi-plus-lg me-2"></i>
                         Nouveau Retrait
                     </a>
@@ -262,7 +262,7 @@
                                     <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
                                 </div>
                                 <div class="mt-2">
-                                    <a href="{% url 'paiements:retrait_intelligent_create' %}?bailleur={{ item.bailleur.id }}" 
+                                    <a href="{% url 'paiements:retrait_auto_create' %}?bailleur={{ item.bailleur.id }}" 
                                        class="btn btn-sm btn-outline-info">
                                         <i class="bi bi-plus-lg me-1"></i>
                                         Créer Retrait
@@ -294,13 +294,13 @@
                 <div class="card-body">
                     <div class="row">
                         <div class="col-md-3 mb-3">
-                            <a href="{% url 'paiements:retrait_intelligent_create' %}" class="btn btn-outline-primary w-100 h-100 d-flex flex-column align-items-center justify-content-center">
+                            <a href="{% url 'paiements:retrait_auto_create' %}" class="btn btn-outline-primary w-100 h-100 d-flex flex-column align-items-center justify-content-center">
                                 <i class="bi bi-plus-circle fa-2x mb-2"></i>
                                 <span>Nouveau Retrait</span>
                             </a>
                         </div>
                         <div class="col-md-3 mb-3">
-                            <a href="{% url 'paiements:recherche_bailleurs_intelligente' %}" class="btn btn-outline-info w-100 h-100 d-flex flex-column align-items-center justify-content-center">
+                            <a href="{% url 'paiements:recherche_intelligente' %}" class="btn btn-outline-info w-100 h-100 d-flex flex-column align-items-center justify-content-center">
                                 <i class="bi bi-search fa-2x mb-2"></i>
                                 <span>Rechercher Bailleur</span>
                             </a>
