--- a/templates/paiements/retraits/retrait_create.html
+++ b/templates/paiements/retraits/retrait_create.html
@@ -20,7 +20,7 @@
                     </p>
                 </div>
                 <div>
-                    <a href="{% url 'paiements:retrait_list' %}" class="btn btn-outline-secondary">
+                    <a href="{% url 'paiements:liste_retraits_bailleur' %}" class="btn btn-outline-secondary">
                         <i class="bi bi-arrow-left me-2"></i> Retour à la liste
                     </a>
                 </div>
@@ -153,7 +153,7 @@
                         </div>
 
                         <div class="d-flex justify-content-end gap-2 mt-4">
-                            <a href="{% url 'paiements:retrait_list' %}" class="btn btn-secondary">
+                            <a href="{% url 'paiements:liste_retraits_bailleur' %}" class="btn btn-secondary">
                                 <i class="bi bi-x-circle me-2"></i> Annuler
                             </a>
                             <button type="submit" class="btn btn-success">
